# objects_library

./: CMakeLists.txt  package.xml
data/Goglu/: goglu.stl
data/Robocup/bouteille_nagoya/: bouteille_eau.blend  bouteille_eau.stl  bouteille_eau_2.stl  fries_snack.blend
data/Robocup/chewing_gum/: boite_gum.stl
data/Robocup/coke/: coke.stl  coke_2.stl
data/Robocup/cold_brew/: cold_brew.stl
data/Robocup/curry/: curry.stl  curry_2.stl
data/Robocup/fries_snack/: fries_snack.stl  fries_snack_2.stl
data/Robocup/fruit_salad/: fruit_salad.stl  fruit_salad_2.stl
data/Robocup/green_tea/: green_tea.stl  green_tea_2.stl
data/Robocup/hair_spray/: hair_spray.stl
data/Robocup/shampoo/: shampoo.stl
data/coke/: coke.dae  coke.obj.mtl  coke.ply  coke2.mtl
data/coke/meshes/: model.dae
data/mug/: Part1.STL
data/nivea/: nivea.blend  nivea.mtl  nivea.stl  nivea_reduc.stl
data/pringles/: cloud_b7b98ffd82048ef043fa6c071a01267e_00000.ply  cloud_b7b98ffd82048ef043fa6c071a032ff3_00000.ply  pringle.stl  pringle3.stl  pringle4.stl  pringles.mtl  pringles.ply
data/redbull/: model.dae  redbull.blend  redbull.blend1  redbull.dae  redbull.mtl  redbull.ply  redbull2.dae  redbull2.stl  redbull3.mtl  redbull_reduc.stl
